数据迁移，更改连接

--- a/Blog.IdentityServer/appsettings.json
+++ b/Blog.IdentityServer/appsettings.json
@@ -15,7 +15,7 @@
   },
   "ConnectionStrings": {
     "IsMysql": true,
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlogIdpPro;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "DefaultConnection": "Server=193.112.107.111; Port=3307;Stmt=; Database=BlogIdpPro;CharSet=UTF8mb4; Uid=root; Pwd=abc123456;",
     "DefaultConnection_file": "c:\\my-file\\dbCountPsw1_ldpxx.txt"
   },
   "Certificates": {
@@ -23,7 +23,7 @@
     "Password": "anson7"
   },
   "StartUp": {
-    "IsOnline": false,
+    "IsOnline": false,//是否本地开发
     "OnlinePath": "https://ids.neters.club"
   }
 }
